--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,7 +17,7 @@ services:
       -  "3306:3306"
     environment:
       MYSQL_ROOT_PASSWORD: 123123
-      MYSQL_DATABASE: fm
+      MYSQL_DATABASE: fm-tr
       MYSQL_USER: admin
       MYSQL_PASSWORD: 123123
 
