--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,6 +1,6 @@
 twig:
     default_path: '%kernel.project_dir%/templates'
-    form-themes: ['bootstrap-5-layout.html.twig']
+    form-themes: ['bootstrap_5_layout.html.twig']
 
 when@test:
     twig:
