--- a/.env
+++ b/.env
@@ -30,3 +30,5 @@ APP_SECRET=53688f85973ccc3246ea516d1f7fdca2
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
 DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+RAPID_API_KEY=""
